# Semantic-Debt-Scanner

./: check_models.py  main.py  pyproject.toml  run_evals.py
messy_codebase/: billing_service.py  config_manager.py  data_parser.py  inventory_api.py  legacy_controller.py  notification_dispatcher.py  order_workflow.py  payment_processor.py  report_generator.py  user_manager.py  user_registration.py  utils.py
src/: cd  graph.py  nodes.py  state.py
